scss/_regions/_header.scss
// Module for applying styles to main page headers.
//
// .-sponsored - Makes space for sponsor module within header.
// .-centered  - Center text in the header (generally used for non-content pages).
// .-hero      - Hero image header banner styling.
//
// Styleguide Header

[role="banner"] {
  position: relative;
  background: $purple no-repeat center center;
  background-size: cover;
  overflow: hidden;
  padding: 144px ($base-spacing / 2) $base-spacing;
  position: relative;

  @include media($tablet) {
    padding-left: 0;
    padding-right: 0;
  }

  > .wrapper {
    position: relative;
    text-align: center;
    width: 100%;
    z-index: 10;

    @include clearfix();

    @include media($tablet) {
      text-align: left;

      @include span(12);
      @include push(2);
    }
  }

  .__title {
    color: $white;
    font-size: $font-larger;
    margin: 0;

    @include media($tablet) {
      font-size: $font-hero;
    }
  }

  .__subtitle {
    color: $white;
    font-size: $font-regular;

    @include media($tablet) {
      font-size: $font-medium;
    }
  }

  .__title,
  .__subtitle,
  .__date {
    text-shadow: $text-shadow;
  }

  video {
    display: none;

    @include media($tablet) {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      min-width: 100%;
      min-height: 100%;
      width: auto;
      height: auto;
      overflow: hidden;
    }
  }

  .sponsor {
    padding: 18px 0 9px;

    @include media($tablet) {
      bottom: 0;
      padding: 0;
      position: absolute;
      right: 0;
    }
  }

  // Makes space for sponsor module inside header.
  // @TODO: There's a better solution for this, but need a quick solution for now (2014.05.22).
  &.-sponsored {
    .__subtitle {
      @include media($tablet) {
        width: 75%;
      }
    }
  }

  // Center text in the header (generally used for non-content pages).
  &.-centered {
    min-height: 365px;
    padding: 216px 0;

    @include media($tablet) {
      height: 520px;
    }

    > .wrapper {
      position: absolute;
      top: 50%;
      padding: 18px;
      text-align: center;
      transform: translateY(-50%);

      @include media($tablet) {
        @include span(8 at 4);
      }
    }

    .__title {
      font-size: $font-larger;
    }

    .__subtitle {
      font-size: $font-regular;
      margin-bottom: 0;

      span {
        opacity: 0.8;
      }
    }
  }

  // Hero image header banner styling.
  &.-hero {
    min-height: 465px;
    padding-top: 216px;
    padding-bottom: 28px;

    @include media($tablet) {
      height: 620px;
    }

    &:before {
      position: absolute;
      content: "";
      width: 100%;
      height: 100%;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 5;
      background: linear-gradient(rgba(#000, 0) 10%, rgba(#000, .2) 65%, rgba(#000, .5) 87%, rgba(#000, .85) 100%);

      @include media($tablet) {
        background: linear-gradient(rgba(#000, 0) 40%, rgba(#000, .2) 70%, rgba(#000, .5) 87%, rgba(#000, .85) 100%);
      }
    }

    > .wrapper {
      @include media($tablet) {
        bottom: 27px;
        position: absolute;
      }
    }

    .__subtitle {
      @include media($tablet) {
        margin-bottom: 9px;
        width: 80%;
      }
    }

    .__date {
      color: #fff;
      font-size: $font-small;
      margin-bottom: 9px;

      @include media($tablet) {
        font-size: $font-regular;
        float: left;
        margin-bottom: 27px;
      }

      & + .__subtitle {
        margin-top: -9px;
      }
    }

    .__signup {
      @include media($tablet) {
        clear: left;
        float: left;
        position: relative;
        width: 50%;
      }

      > .btn, form {
        @include media($tablet) {
          float: left;
        }
      }
    }
  }
}

